--- a/index.html
+++ b/index.html
@@ -108,11 +108,21 @@
                 <div style="display: flex; flex-direction: column; gap: 1rem; margin-top: 1rem;">
                     <button id="btn-students-book" class="btn btn-primary"
                         style="width: 100%; padding: 1rem; font-size: 1rem;">
-                        📚 Student's Book
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20" />
+                            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z" />
+                        </svg>
+                        Student's Book
                     </button>
                     <button id="btn-workbook" class="btn btn-primary"
                         style="width: 100%; padding: 1rem; font-size: 1rem;">
-                        📝 Workbook
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 20h9" />
+                            <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z" />
+                        </svg>
+                        Workbook
                     </button>
                     <button id="btn-cancel-english" class="btn btn-secondary" style="width: 100%;">
                         Cancelar
@@ -135,10 +145,21 @@
                 </p>
                 <div class="modal-actions" style="flex-direction: column; gap: 0.75rem;">
                     <button id="btn-contribute-yes" class="btn btn-primary" style="width: 100%;">
-                        📸 Sí, voy a contribuir
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
+                            <circle cx="12" cy="13" r="4" />
+                        </svg>
+                        Sí, voy a contribuir
                     </button>
                     <button id="btn-contribute-no" class="btn btn-secondary" style="width: 100%;">
-                        ⏭️ No ahora (esperar 10s)
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="13 19 22 12 13 5 13 19" />
+                            <polygon points="2 19 11 12 2 5 2 19" />
+                        </svg>
+                        No ahora (esperar 10s)
                     </button>
                 </div>
             </div>
